--- a/form.html
+++ b/form.html
@@ -41,24 +41,24 @@
             <label for="userName" title="Please enter your username.">
                 *Username:
                 <input type="text" id="userName" name="username" required>
-            </label><br>
+            </label>
             <label for="password" title="Please enter your password.">
                 *Password:
                 <input type="password" id="password" name="password" pattern="[A-Za-z0-9]{8,}" required>
-            </label><br>
+            </label>
             <label for="password" title="Please re-enter your password.">
                 *Re-enter Password:
                 <input type="password" id="rePassword" name="rePassword" required>
-            </label><br>
+            </label>
             <span id="errorMessage" class="error-message"></span>
             <label for="email" title="Please enter your e-mail.">
                 *E-mail:
                 <input type="email" id="email" name="email" pattern="[a-zA-Z0-9._%+\-]+@byui\.edu$" required>
-            </label><br>
+            </label>
             <div id="rangeValue"></div>
             <label for="r">Range
                 <input type="range" id="r" name="r" min="1" max="10" value="1" step="1" list="rangevalues">
-            </label><br>
+            </label>
             <datalist id="rangevalues">
                 <option value="1">1</option>
                 <option value="2">2</option>
