Fixed the HTML Validator error on line 51 and added a line break above the button.

--- a/form.html
+++ b/form.html
@@ -46,7 +46,7 @@
                 *Password:
                 <input type="password" id="password" name="password" pattern="[A-Za-z0-9]{8,}" required>
             </label>
-            <label for="password" title="Please re-enter your password.">
+            <label for="rePassword" title="Please re-enter your password.">
                 *Re-enter Password:
                 <input type="password" id="rePassword" name="rePassword" required>
             </label>
@@ -70,7 +70,7 @@
                 <option value="8">8</option>
                 <option value="9">9</option>
                 <option value="10">10</option>
-            </datalist>
+            </datalist><br>
             <input type="submit" value="Send Feedback" class="submitButton">
         </form>
     </main>
