--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
 
             </div>
         </div>
+        <div id="output"></div>
     </main>
     <footer>
         <p>&copy;<span id="currentYear"></span><br>Robert Whisenhunt<br>North Carolina</p>
@@ -96,6 +97,7 @@
     <script src="scripts/getdates.js"></script>
     <script src="scripts/hamburger.js"></script>
     <script src="scripts/visits.js"></script>
+    <script src="scripts/links.js"></script>
 </body>
 
 </html>
