--- a/chamber/thankyou.html
+++ b/chamber/thankyou.html
@@ -38,15 +38,15 @@
             <!-- Hamburger Button -->
             <button id="menu"></button>
             <nav class="navigation">
-                <a href="https://whisenhunt-robert.github.io/wdd230/chamber/" class="active">Home</a>
+                <a href="https://whisenhunt-robert.github.io/wdd230/chamber/">Home</a>
                 <a href="https://whisenhunt-robert.github.io/wdd230/chamber/discover.html">Discover</a>
                 <a href="">Directory</a>
-                <a href="">Join</a>
+                <a href="https://whisenhunt-robert.github.io/wdd230/chamber/join.html" class="active">Join</a>
             </nav>
         </div>
     </header>
 
-    <main>
+    <main id="thankyouPage">
         <div class="thankYou">
             <p>Thank you for filling out our form.</p>
         </div>
