Made a couple of changes with the meta and link information.

--- a/chamber/join.html
+++ b/chamber/join.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Winston Salem, NC Chamber of Commerce</title>
-    <meta name="description" content="Winston Salem, NC Chamber of Commerce, Robert Whisenhunt, chamber of commerce">
+    <title>Join the Winston Salem, NC Chamber of Commerce</title>
+    <meta name="description"
+        content="Join the Winston Salem, NC Chamber of Commerce, Robert Whisenhunt, chamber of commerce join page">
     <meta name="author" content="">
     <link
         href="https://fonts.googleapis.com/css2?family=Pathway+Extreme:wght@300&family=Roboto+Slab:wght@300&family=Vollkorn&display=swap"
@@ -15,7 +16,7 @@
     <link href="styles/medium.css" rel="stylesheet">
     <link href="styles/large.css" rel="stylesheet">
     <link rel="icon" href="favicon.ico">
-    <meta property="og:title" content="Winston Salem, NC Chamber of Commerce">
+    <meta property="og:title" content="Join the Winston Salem, NC Chamber of Commerce">
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://www.worldatlas.com/upload/64/10/03/shutterstock-1427463413.jpg">
     <meta property="og:url" content="https://whisenhunt-robert.github.io/wdd230/chamber/join.html">
