--- a/chamber/index.html
+++ b/chamber/index.html
@@ -41,7 +41,7 @@
                 <a href="https://whisenhunt-robert.github.io/wdd230/chamber/" class="active">Home</a>
                 <a href="https://whisenhunt-robert.github.io/wdd230/chamber/discover.html">Discover</a>
                 <a href="">Directory</a>
-                <a href="">Join</a>
+                <a href="https://whisenhunt-robert.github.io/wdd230/chamber/join.html">Join</a>
             </nav>
         </div>
     </header>
