Added the join.html to the "Join the Chamber" button so that it takes you to the Join Page as well.

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -58,7 +58,7 @@
                 </picture>
                 <!--Call to Action-->
                 <div>
-                    <button onclick="document.location='#'">Join the Chamber</button>
+                    <button onclick="document.location='join.html'">Join the Chamber</button>
                 </div>
             </div>
             <section class="events">
