Updated the paragraphs for the prices of each membership.

--- a/chamber/join.html
+++ b/chamber/join.html
@@ -103,7 +103,7 @@
             <h2>Membership Plan Information</h2>
             <section class="non-profit-membership">
                 <h3>Non Profit Membership</h3>
-                <p>Free</p>
+                <p>Price: Free</p>
                 <ul>
                     <li>To</li>
                     <li>be</li>
@@ -112,7 +112,7 @@
             </section>
             <section class="bronze-membership">
                 <h3>Bronze Membership</h3>
-                <p>$250</p>
+                <p>Price: $250</p>
                 <ul>
                     <li>To</li>
                     <li>be</li>
@@ -121,7 +121,7 @@
             </section>
             <section class="silver-membership">
                 <h3>Silver Membership</h3>
-                <p>$500</p>
+                <p>Price: $500</p>
                 <ul>
                     <li>To</li>
                     <li>be</li>
@@ -130,7 +130,7 @@
             </section>
             <section class="gold-membership">
                 <h3>Gold Membership</h3>
-                <p>$1,000</p>
+                <p>Price: $1,000</p>
                 <ul>
                     <li>To</li>
                     <li>be</li>
