Updated the thankyou page.

--- a/chamber/thankyou.html
+++ b/chamber/thankyou.html
@@ -48,7 +48,7 @@
 
     <main id="thankyouPage">
         <div class="thankYou">
-            <p>Thank you for filling out our form.</p>
+            <p>Thank you for filling out our application.</p>
         </div>
     </main>
 
