Fixed the box for the description to be closely aligned to the rest of the boxes.

--- a/chamber/join.html
+++ b/chamber/join.html
@@ -88,10 +88,10 @@
                     <option value="gold">Gold Membership</option>
                 </select>
                 <label for="businessDesc" title="Please type a description about the business.">
-                    Business/Oganization's description:
+                    Business/Oganization's Description:
                 </label>
                 <textarea title="Describe the business or organization." id="businessDesc" name="businessDescription"
-                    rows="4" cols="45"
+                    rows="4" cols="41"
                     placeholder="Please enter a brief description about the business or organization.">
                     </textarea>
                 <!-- Hidden input for current date/time -->
