Updated the selection drop box for the membership level to just say the level names, not use the word "membership" afterwards.

--- a/chamber/join.html
+++ b/chamber/join.html
@@ -83,9 +83,9 @@
                 <select id="membershipLevel" name="membershipLevel" required>
                     <option value="" disabled selected>Select a membership level</option>
                     <option value="non-profit">Non Profit</option>
-                    <option value="bronze">Bronze Membership</option>
-                    <option value="silver">Silver Membership</option>
-                    <option value="gold">Gold Membership</option>
+                    <option value="bronze">Bronze</option>
+                    <option value="silver">Silver</option>
+                    <option value="gold">Gold</option>
                 </select>
                 <label for="businessDesc" title="Please type a description about the business.">
                     Business/Oganization's Description:
