Still working on the directory page. It's a work in progress, but I think I'm getting it.

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -46,8 +46,8 @@
         </div>
     </header>
 
-    <main id="directoryPage">
-        <div class="cards"></div>
+    <main>
+        <div id="companyList"></div>
     </main>
 
     <footer>
@@ -72,6 +72,7 @@
     <script src="scripts/hamburger.js"></script>
     <script src="scripts/darkmode.js"></script>
     <script src="scripts/windchill.js"></script>
+    <script src="scripts/members.js"></script>
 </body>
 
 </html>
