Added the link to the directory page in progress. Still working on it though.

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -40,7 +40,7 @@
             <nav class="navigation">
                 <a href="https://whisenhunt-robert.github.io/wdd230/chamber/" class="active">Home</a>
                 <a href="https://whisenhunt-robert.github.io/wdd230/chamber/discover.html">Discover</a>
-                <a href="">Directory</a>
+                <a href="https://whisenhunt-robert.github.io/wdd230/chamber/directory.html">Directory</a>
                 <a href="https://whisenhunt-robert.github.io/wdd230/chamber/join.html">Join</a>
             </nav>
         </div>
