Still working on the directory page. Updating the JSON file and checking as I go.

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -48,6 +48,10 @@
     </header>
 
     <main>
+        <div id="viewOptions">
+            <button onclick="toggleView('list')">List View</button>
+            <button onclick="toggleView('grid')">Grid View</button>
+        </div>
         <div id="companyList"></div>
     </main>
 
