--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -39,9 +39,9 @@
             <!-- Hamburger Button -->
             <button id="menu"></button>
             <nav class="navigation">
-                <a href="https://whisenhunt-robert.github.io/wdd230/chamber/" class="active">Home</a>
+                <a href="https://whisenhunt-robert.github.io/wdd230/chamber/">Home</a>
                 <a href="https://whisenhunt-robert.github.io/wdd230/chamber/discover.html">Discover</a>
-                <a href="https://whisenhunt-robert.github.io/wdd230/chamber/directory.html">Directory</a>
+                <a href="https://whisenhunt-robert.github.io/wdd230/chamber/directory.html" class="active">Directory</a>
                 <a href="https://whisenhunt-robert.github.io/wdd230/chamber/join.html">Join</a>
             </nav>
         </div>
