Updated the weather on my course home page using my weather API.

--- a/index.html
+++ b/index.html
@@ -57,8 +57,12 @@
             <section class="card">
                 <h3>Information</h3>
                 <div id="info">
-                    <p>Weather: <span id="weather"></span><br>
-                        Number of Visits: <span class="visits"></span></p>
+                    <div id="weather-info">
+                        <h2>Current Weather</h2>
+                        <p id="temperature"></p>
+                        <img id="weather-icon" src="weather.js" alt="Weather Icon"><br>
+                        Number of Visits: <span class="visits"></span>
+                    </div>
                 </div>
             </section>
         </div>
@@ -83,6 +87,7 @@
     <script src="scripts/hamburger.js"></script>
     <script src="scripts/visits.js"></script>
     <script src="scripts/links.js"></script>
+    <script src="scripts/weather.js"></script>
 </body>
 
 </html>
