Updated the Information part of the home page to look a little better.

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                         <h2>Current Weather</h2>
                         <p id="temperature"></p>
                         <img id="weather-icon" src="weather.js" alt="Weather Icon"><br>
-                        Number of Visits: <span class="visits"></span>
+                        <h2>Number of Visits</h2><span class="visits"></span>
                     </div>
                 </div>
             </section>
