Updated the home page one more time.

--- a/index.html
+++ b/index.html
@@ -61,6 +61,8 @@
                         <h2>Current Weather</h2>
                         <p id="temperature"></p>
                         <img id="weather-icon" src="weather.js" alt="Weather Icon"><br>
+                    </div>
+                    <div id="visits">
                         <h2>Number of Visits</h2><span class="visits"></span>
                     </div>
                 </div>
