Working on the chamber page.

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -63,11 +63,11 @@
             </div>
             <section class="events">
                 <!--Current event(s) section-->
-                <h2>Events Section</h2>
+                <h2>Events</h2>
             </section>
             <section class="weather">
                 <!--Weather card section-->
-                <h2>Weather Section</h2>
+                <h2>Weather</h2>
                 <div id="weather-info">
                     <div id="weather-details">
                         <p id="temperature"></p>
