--- a/chamber/join.html
+++ b/chamber/join.html
@@ -41,7 +41,7 @@
             <nav class="navigation">
                 <a href="https://whisenhunt-robert.github.io/wdd230/chamber/">Home</a>
                 <a href="https://whisenhunt-robert.github.io/wdd230/chamber/discover.html">Discover</a>
-                <a href="">Directory</a>
+                <a href="https://whisenhunt-robert.github.io/wdd230/chamber/directory.html">Directory</a>
                 <a href="https://whisenhunt-robert.github.io/wdd230/chamber/join.html" class="active">Join</a>
             </nav>
         </div>
