Work in progress but it's getting there...

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -25,7 +25,7 @@
     <header>
         <div class="header-left">
             <div id="mode">
-                🌑
+                🌒
             </div>
             <picture>
                 <source srcset="images/winston-salem-logo.webp" media="(max-width: 700px)">
@@ -54,20 +54,43 @@
                     <source srcset="images/small-winston-salem.png" media="(max-width: 550px)">
                     <source srcset="images/medium-winston-salem.png" media="(max-width: 700px)">
                     <source srcset="images/large-winston-salem.png" media="(max-width: 1000px)">
-                    <img src="images/large-winston-salem.png" alt="Hero Image">
+                    <img src="images/large-winston-salem.png" alt="Hero">
                 </picture>
                 <!--Call to Action-->
                 <div>
                     <button onclick="document.location='join.html'">Join the Chamber</button>
                 </div>
             </div>
+            <!-- Banner -->
+            <div id="banner" class="banner">
+                <span class="close-btn" onclick="closeBanner()">❌</span>
+                <p>Join us for our Chamber of Commerce meet and greet this Wednesday at 7:00 p.m!</p>
+            </div>
             <section class="events">
                 <!--Current event(s) section-->
                 <h2>Events</h2>
+                <hr class="separator">
+                <h3>RiverRun International Film Festival</h3>
+                <p>April 18th to April 27th, 2024</p>
+                <img src="images/riverrun.jpeg" alt="RiverRun Festival.">
+                <p>Celebrating 26 years in 2024, RuverRun is one of the fastest-growing regional film festivals in the
+                    U.S., and a premier film festival in the Southeast.</p>
+                <a href="https://riverrunfilm.com/">Visit Website</a>
+                <hr class="event-separator">
+                <h3>Piedmont Earth Day Fair</h3>
+                <p>April 20th, 2024</p>
+                <img src="images/earth-day-fair.jpg" alt="Earth Day Fair.">
+                <p>The biggest Earth Day celebration and one-day environmental education event in North Carolina! Helt
+                    at the Winston-Salem Fairgrounds, just minutes from downtown Winston-Salem at 569 Fairgrounds Blvd
+                    of Shorefair Drive.</p>
+                <a
+                    href="https://www.facebook.com/events/1055666228395889/?acontext=%7B%22event_action_history%22%3A[%7B%22surface%22%3A%22page%22%7D]%7D">Get
+                    Tickets</a>
             </section>
             <section class="weather">
                 <!--Weather card section-->
                 <h2>Weather</h2>
+                <hr class="weather-separator">
                 <div id="weather-info">
                     <div id="weather-details">
                         <p id="temperature"></p>
@@ -90,15 +113,27 @@
             </section>
             <section id="spotlight1">
                 <!--Spotlights section-->
-                <h2>Spotlights Section</h2>
+                <h2>Old Salem<br>Museums and Gardens</h2>
+                <img src="images/old-salem.jpg" alt="Old Salem in Winston-Salem">
+                <p>600 South Main Street,<br>Winston-Salem, NC 27101</p>
+                <p>Phone: (336) 721-7300</p>
+                <a href="https://www.oldsalem.org">Visit Website</a>
             </section>
             <section id="spotlight2">
                 <!--Spotlights section-->
-                <h2>Spotlights Section</h2>
+                <h2>Wake Forest<br>University</h2>
+                <img src="images/wake-forest-u.jpg" alt="Old Salem in Winston-Salem">
+                <p>PO Box 7226,<br>Winston-Salem, NC 27109</p>
+                <p>Phone: (336) 758-5000</p>
+                <a href="https://www.wfu.edu">Visit Website</a>
             </section>
             <section id="spotlight3">
                 <!--Spotlights section-->
-                <h2>Spotlights Section</h2>
+                <h2>Reynolda House<br>Museum of American Art</h2>
+                <img src="images/reynolda-house.jpg" alt="Old Salem in Winston-Salem">
+                <p>PO Box 7287,<br>Winston-Salem, NC 27109</p>
+                <p>Phone: (336) 758-5150</p>
+                <a href="https://www.reynolda.org">Visit Website</a>
             </section>
         </div>
     </main>
@@ -126,6 +161,7 @@
     <script src="scripts/darkmode.js"></script>
     <script src="scripts/windchill.js"></script>
     <script src="scripts/weather.js"></script>
+    <script src="scripts/banner.js"></script>
 </body>
 
 </html>
