Fixed the errors it was giving me.

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -95,7 +95,7 @@
                     <div id="weather-details">
                         <p id="temperature"></p>
                     </div>
-                    <img id="weather-icon" src="weather.js" alt="Weather Icon">
+                    <img id="weather-icon" src="scripts/weather.js" alt="Weather Icon">
                     <div id="forecast">
                         <h3>5-Day Forecast</h3>
                         <ul id="forecast-list"></ul>
@@ -154,6 +154,7 @@
             <div class="lastMod">
                 <p>Last modification: <span id="lastModified"></span></p>
             </div>
+            <div id="sidebar"></div>
         </div>
     </footer>
     <script src="scripts/getdates.js"></script>
