--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -28,10 +28,12 @@
             <div id="mode">
                 🌑
             </div>
-            <picture>
-                <source srcset="images/winston-salem-logo.webp" media="(max-width: 700px)">
-                <img src="images/winston-salem-logo.webp" alt="Winston Salem Logo">
-            </picture>
+            <a href="https://whisenhunt-robert.github.io/wdd230/chamber/">
+                <picture>
+                    <source srcset="images/winston-salem-logo.webp" media="(max-width: 700px)">
+                    <img src="images/winston-salem-logo.webp" alt="Winston Salem Logo">
+                </picture>
+            </a>
             <h1>Winston Salem<br>Chamber of Commerce</h1>
         </div>
         <div class="vertical-line"></div>
