Tried several things to fix the nav from overflowing out of the header but nothing works...

--- a/chamber/join.html
+++ b/chamber/join.html
@@ -158,12 +158,12 @@
             <div class="lastMod">
                 <p>Last modification: <span id="lastModified"></span></p>
             </div>
+            <div id="sidebar"></div>
         </div>
     </footer>
     <script src="scripts/getdates.js"></script>
     <script src="scripts/hamburger.js"></script>
     <script src="scripts/darkmode.js"></script>
-    <script src="scripts/windchill.js"></script>
     <script src="scripts/join.js"></script>
 </body>
 
