Hoping for the best as I think I'm done with my chamber page.

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -16,17 +16,17 @@
     <link href="styles/medium.css" rel="stylesheet">
     <link href="styles/large.css" rel="stylesheet">
     <link rel="icon" href="favicon.ico">
-    <meta property="og:title" content="Winston Salem, NC Chamber of Commerce">
+    <meta property="og:title" content="Winston Salem, NC Chamber of Commerce and Discover">
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://www.worldatlas.com/upload/64/10/03/shutterstock-1427463413.jpg">
-    <meta property="og:url" content="https://whisenhunt-robert.github.io/wdd230/chamber/index.html">
+    <meta property="og:url" content="https://whisenhunt-robert.github.io/wdd230/chamber/discover.html">
 </head>
 
 <body>
     <header>
         <div class="header-left">
             <div id="mode">
-                🌑
+                🌒
             </div>
             <a href="https://whisenhunt-robert.github.io/wdd230/chamber/">
                 <picture>
