--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 <body>
     <header>
-        <img src="images/profile_photo.webp" alt="My profile photo.">
+        <img src="images/profile_photo.webp" alt="My profile.">
         <h1>Robert Whisenhunt</h1>
     </header>
     <!-- Hamburger Button -->
@@ -41,7 +41,7 @@
             <picture>
                 <source srcset="images/dctemple-small.webp" media="(max-width: 550px)">
                 <source srcset="images/dctemple.webp" media="(max-width: 700px)">
-                <img src="images/dctemple.webp" alt="Hero Image" loading="lazy">
+                <img src="images/dctemple.webp" alt="Washington D.C. Temple" loading="lazy">
             </picture>
             <div class="herolabel">
                 <p>Washington D.C. Temple</p>
