Changes the images to webp to hopefully help load times. I tried...

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -55,33 +55,33 @@
                 <h2>Downtown</h2>
                 <p>Tour through Downtown as it offers many buildings to explore, including a library!</p>
             </div>
-            <img class="hover" src="images/downtown.jpg" alt="Picture of Downtown Winston Salem, NC." loading="lazy">
+            <img class="hover" src="images/downtown.webp" alt="Downtown Winston Salem, NC." loading="lazy">
             <div class="place">
                 <h2>Salem Lake</h2>
                 <p>Enjoy a variety of things that this place offers.</p>
             </div>
-            <img class="hover" src="images/salem-lake.jpg" alt="Salem Lake, NC." loading="lazy">
+            <img class="hover" src="images/salem-lake.webp" alt="Salem Lake, NC." loading="lazy">
             <div class="place">
                 <h2>Old Salem</h2>
                 <p>Tour through museums and gardens.</p>
             </div>
-            <img class="hover" src="images/old-salem.jpg" alt="Old Salem, NC." loading="lazy">
+            <img class="hover" src="images/old-salem.webp" alt="Old Salem, NC." loading="lazy">
             <div class="place">
                 <h2>Reynolda House</h2>
                 <p>Tour this Museum of American Art.</p>
             </div>
-            <img class="hover" src="images/reynolda-house.jpg"
+            <img class="hover" src="images/reynolda-house.webp"
                 alt="Reynolda House Museum of American Art in Winston Salem, NC." loading="lazy">
             <div class="place">
                 <h2>Hanes Mall</h2>
                 <p>Browse the many stores this mall has to offer and grab a bite to eat at the food court.</p>
             </div>
-            <img class="hover" src="images/hanes-mall.jpg" alt="Hanes Mall in Winston Salem, NC." loading="lazy">
+            <img class="hover" src="images/hanes-mall.webp" alt="Hanes Mall in Winston Salem, NC." loading="lazy">
             <div class="place">
                 <h2>Wake Forest University</h2>
                 <p>One of the four popular universities in the state of North Carolina.</p>
             </div>
-            <img class="hover" src="images/wake-forest-u.jpg" alt="Wake Forest University in Winston Salem, NC."
+            <img class="hover" src="images/wake-forest-u.webp" alt="Wake Forest University in Winston Salem, NC."
                 loading="lazy">
             <div class="place">
                 <div class="sidebar" id="sidebar">
@@ -107,7 +107,6 @@
             <div class="lastMod">
                 <p>Last modification: <span id="lastModified"></span></p>
             </div>
-            <div id="sidebar"></div>
         </div>
     </footer>
     <script src="scripts/getdates.js"></script>
