--- a/chamber/index.html
+++ b/chamber/index.html
@@ -53,10 +53,10 @@
             <!--Hero Image goes here.-->
             <div class="hero">
                 <picture>
-                    <source srcset="images/small-winston-salem.png" media="(max-width: 550px)">
-                    <source srcset="images/medium-winston-salem.png" media="(max-width: 700px)">
-                    <source srcset="images/large-winston-salem.png" media="(max-width: 1000px)">
-                    <img src="images/large-winston-salem.png" alt="Hero">
+                    <source srcset="images/small-winston-salem.webp" media="(max-width: 550px)">
+                    <source srcset="images/medium-winston-salem.webp" media="(max-width: 700px)">
+                    <source srcset="images/large-winston-salem.webp" media="(max-width: 1000px)">
+                    <img src="images/large-winston-salem.webp" alt="Hero">
                 </picture>
                 <!--Call to Action-->
                 <div>
@@ -74,14 +74,14 @@
                 <hr class="separator">
                 <h3>RiverRun International Film Festival</h3>
                 <p>April 18th to April 27th, 2024</p>
-                <img src="images/riverrun.jpeg" alt="RiverRun Festival.">
+                <img src="images/riverrun.webp" alt="RiverRun Festival.">
                 <p>Celebrating 26 years in 2024, RuverRun is one of the fastest-growing regional film festivals in the
                     U.S., and a premier film festival in the Southeast.</p>
                 <a href="https://riverrunfilm.com/">Visit Website</a>
                 <hr class="event-separator">
                 <h3>Piedmont Earth Day Fair</h3>
                 <p>April 20th, 2024</p>
-                <img src="images/earth-day-fair.jpg" alt="Earth Day Fair.">
+                <img src="images/earth-day-fair.webp" alt="Earth Day Fair.">
                 <p>The biggest Earth Day celebration and one-day environmental education event in North Carolina! Helt
                     at the Winston-Salem Fairgrounds, just minutes from downtown Winston-Salem at 569 Fairgrounds Blvd
                     of Shorefair Drive.</p>
@@ -107,7 +107,7 @@
             <section id="spotlight1">
                 <!--Spotlights section-->
                 <h2>Old Salem<br>Museums and Gardens</h2>
-                <img src="images/old-salem.jpg" alt="Old Salem in Winston-Salem">
+                <img src="images/old-salem.webp" alt="Old Salem in Winston-Salem">
                 <p>600 South Main Street,<br>Winston-Salem, NC 27101</p>
                 <p>Phone: (336) 721-7300</p>
                 <a href="https://www.oldsalem.org">Visit Website</a>
@@ -115,7 +115,7 @@
             <section id="spotlight2">
                 <!--Spotlights section-->
                 <h2>Wake Forest<br>University</h2>
-                <img src="images/wake-forest-u.jpg" alt="Old Salem in Winston-Salem">
+                <img src="images/wake-forest-u.webp" alt="Old Salem in Winston-Salem">
                 <p>PO Box 7226,<br>Winston-Salem, NC 27109</p>
                 <p>Phone: (336) 758-5000</p>
                 <a href="https://www.wfu.edu">Visit Website</a>
@@ -123,7 +123,7 @@
             <section id="spotlight3">
                 <!--Spotlights section-->
                 <h2>Reynolda House<br>Museum of American Art</h2>
-                <img src="images/reynolda-house.jpg" alt="Old Salem in Winston-Salem">
+                <img src="images/reynolda-house.webp" alt="Old Salem in Winston-Salem">
                 <p>PO Box 7287,<br>Winston-Salem, NC 27109</p>
                 <p>Phone: (336) 758-5150</p>
                 <a href="https://www.reynolda.org">Visit Website</a>
