Added social media icons for Facebook and Twitter.

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -66,6 +66,12 @@
         </div>
         <div class="footer-right">
             <!--Social Media icons/links will go here.-->
+            <div class="social-icons">
+                <a href="https://www.facebook.com/cityofwinstonsalem/" target="_blank"><img
+                        src="images/facebook-icon.png" alt="Facebook"></a>
+                <a href="https://www.twitter.com/CityofWS" target="_blank"><img src="images/twitter-icon.png"
+                        alt="Twitter"></a>
+            </div>
         </div>
         <div class="footer-bottom">
             <p>&copy;<span id="currentYear"></span> Winston Salem Chamber<br>Robert Whisenhunt<br>WDD 230 Project
