Fixed an error that the HTML Validation showed.

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -80,14 +80,12 @@
                 <a href="https://riverrunfilm.com/">Visit Website</a>
                 <hr class="event-separator">
                 <h3>Piedmont Earth Day Fair</h3>
-                <p>April 20th, 2024</p>
+                <p>April 22ns, 2024</p>
                 <img src="images/earth-day-fair.webp" alt="Earth Day Fair.">
                 <p>The biggest Earth Day celebration and one-day environmental education event in North Carolina! Helt
                     at the Winston-Salem Fairgrounds, just minutes from downtown Winston-Salem at 569 Fairgrounds Blvd
                     of Shorefair Drive.</p>
-                <a
-                    href="https://www.facebook.com/events/1055666228395889/?acontext=%7B%22event_action_history%22%3A[%7B%22surface%22%3A%22page%22%7D]%7D">Get
-                    Tickets</a>
+                <a href="https://www.peanc.org/winston-salem-earth-day-fair">Visit Website</a>
             </section>
             <section class="weather">
                 <!--Weather card section-->
