Fixed the spotlights section to call from the json file.

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -102,31 +102,10 @@
                     </div>
                 </div>
             </section>
-            <section id="spotlight1">
-                <!--Spotlights section-->
-                <h2>Old Salem<br>Museums and Gardens</h2>
-                <img src="images/old-salem.webp" alt="Old Salem in Winston-Salem">
-                <p>600 South Main Street,<br>Winston-Salem, NC 27101</p>
-                <p>Phone: (336) 721-7300</p>
-                <a href="https://www.oldsalem.org">Visit Website</a>
-            </section>
-            <section id="spotlight2">
-                <!--Spotlights section-->
-                <h2>Wake Forest<br>University</h2>
-                <img src="images/wake-forest-u.webp" alt="Old Salem in Winston-Salem">
-                <p>PO Box 7226,<br>Winston-Salem, NC 27109</p>
-                <p>Phone: (336) 758-5000</p>
-                <a href="https://www.wfu.edu">Visit Website</a>
-            </section>
-            <section id="spotlight3">
-                <!--Spotlights section-->
-                <h2>Reynolda House<br>Museum of American Art</h2>
-                <img src="images/reynolda-house.webp" alt="Old Salem in Winston-Salem">
-                <p>PO Box 7287,<br>Winston-Salem, NC 27109</p>
-                <p>Phone: (336) 758-5150</p>
-                <a href="https://www.reynolda.org">Visit Website</a>
-            </section>
         </div>
+        <section id="spotlights">
+            <div id="spotlight-sections" class="spotlight-grid"></div>
+        </section>
     </main>
 
     <footer>
@@ -159,6 +138,7 @@
     <script src="scripts/darkmode.js"></script>
     <script src="scripts/weather.js"></script>
     <script src="scripts/banner.js"></script>
+    <script src="scripts/spotlights.js"></script>
 </body>
 
 </html>
