Fixed an error I had regarding the spotlights section.

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -104,6 +104,8 @@
             </section>
         </div>
         <section id="spotlights">
+            <h2>Member Spotlights</h2>
+            <hr class="separator">
             <div id="spotlight-sections" class="spotlight-grid"></div>
         </section>
     </main>
