Began the adventure that is the final project.

--- a/record.html
+++ b/record.html
@@ -24,7 +24,7 @@
 
 <body>
     <header>
-        <img src="images/profile_photo.webp" alt="My profile photo.">
+        <img src="images/profile_photo.webp" alt="My profile">
         <h1>Robert Whisenhunt</h1>
     </header>
     <!-- Hamburger Button -->
